methods.flowerpot.FlowerPot.scala.error
Erreur de compilation :
FlowerPot:27: error: ';' expected but ',' found.
  setCouleurBrosse(c),baisseBrosse();leveBrosse()
                     ^